source/quantumCode/AST_Scripts/XMLExpParser.py
# Generated from XMLExp.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class XMLExpParser ( Parser ):

    grammarFileName = "XMLExp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'</'", "'='", "'''", "'gate'", 
                     "'SKIP'", "'X'", "'CU'", "'RZ'", "'SR'", "'Lshift'", 
                     "'Rshift'", "'Rev'", "'QFT'", "'#t'", "'#f'", "'.'", 
                     "'RQFT'", "'op'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'", "'type'", "'pexp'", "'vexp'", "'id'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TrueLiteral", "FalseLiteral", "Dot", "RQFT", "OP", 
                      "Plus", "Minus", "Times", "Div", "Mod", "Exp", "Type", 
                      "PEXP", "VEXP", "ID", "Number", "Identifier", "Letter", 
                      "LetterOrDigit", "StrLiteral", "AT", "ELLIPSIS", "WS", 
                      "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_exp = 1
    RULE_idexp = 2
    RULE_vexp = 3
    RULE_numexp = 4
    RULE_skipexp = 5
    RULE_xexp = 6
    RULE_cuexp = 7
    RULE_rzexp = 8
    RULE_srexp = 9
    RULE_lshiftexp = 10
    RULE_rshiftexp = 11
    RULE_revexp = 12
    RULE_qftexp = 13
    RULE_rqftexp = 14
    RULE_op = 15
    RULE_boolexp = 16

    ruleNames =  [ "program", "exp", "idexp", "vexp", "numexp", "skipexp", 
                   "xexp", "cuexp", "rzexp", "srexp", "lshiftexp", "rshiftexp", 
                   "revexp", "qftexp", "rqftexp", "op", "boolexp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    TrueLiteral=16
    FalseLiteral=17
    Dot=18
    RQFT=19
    OP=20
    Plus=21
    Minus=22
    Times=23
    Div=24
    Mod=25
    Exp=26
    Type=27
    PEXP=28
    VEXP=29
    ID=30
    Number=31
    Identifier=32
    Letter=33
    LetterOrDigit=34
    StrLiteral=35
    AT=36
    ELLIPSIS=37
    WS=38
    Comment=39
    Line_Comment=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(XMLExpParser.ExpContext,i)


        def getRuleIndex(self):
            return XMLExpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = XMLExpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.exp()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XMLExpParser.T__0:
                self.state = 35
                self.exp()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def skipexp(self):
            return self.getTypedRuleContext(XMLExpParser.SkipexpContext,0)


        def xexp(self):
            return self.getTypedRuleContext(XMLExpParser.XexpContext,0)


        def cuexp(self):
            return self.getTypedRuleContext(XMLExpParser.CuexpContext,0)


        def rzexp(self):
            return self.getTypedRuleContext(XMLExpParser.RzexpContext,0)


        def srexp(self):
            return self.getTypedRuleContext(XMLExpParser.SrexpContext,0)


        def lshiftexp(self):
            return self.getTypedRuleContext(XMLExpParser.LshiftexpContext,0)


        def rshiftexp(self):
            return self.getTypedRuleContext(XMLExpParser.RshiftexpContext,0)


        def revexp(self):
            return self.getTypedRuleContext(XMLExpParser.RevexpContext,0)


        def qftexp(self):
            return self.getTypedRuleContext(XMLExpParser.QftexpContext,0)


        def rqftexp(self):
            return self.getTypedRuleContext(XMLExpParser.RqftexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = XMLExpParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.skipexp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.xexp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.cuexp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.rzexp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 45
                self.srexp()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.lshiftexp()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 47
                self.rshiftexp()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 48
                self.revexp()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 49
                self.qftexp()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 50
                self.rqftexp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.ID)
            else:
                return self.getToken(XMLExpParser.ID, i)

        def Identifier(self):
            return self.getToken(XMLExpParser.Identifier, 0)

        def getRuleIndex(self):
            return XMLExpParser.RULE_idexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdexp" ):
                listener.enterIdexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdexp" ):
                listener.exitIdexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdexp" ):
                return visitor.visitIdexp(self)
            else:
                return visitor.visitChildren(self)




    def idexp(self):

        localctx = XMLExpParser.IdexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_idexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(XMLExpParser.T__0)
            self.state = 54
            self.match(XMLExpParser.ID)
            self.state = 55
            self.match(XMLExpParser.T__1)
            self.state = 56
            self.match(XMLExpParser.Identifier)
            self.state = 57
            self.match(XMLExpParser.T__2)
            self.state = 58
            self.match(XMLExpParser.ID)
            self.state = 59
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def VEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.VEXP)
            else:
                return self.getToken(XMLExpParser.VEXP, i)

        def numexp(self):
            return self.getTypedRuleContext(XMLExpParser.NumexpContext,0)


        def boolexp(self):
            return self.getTypedRuleContext(XMLExpParser.BoolexpContext,0)


        def OP(self):
            return self.getToken(XMLExpParser.OP, 0)

        def op(self):
            return self.getTypedRuleContext(XMLExpParser.OpContext,0)


        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(XMLExpParser.VexpContext,i)


        def getRuleIndex(self):
            return XMLExpParser.RULE_vexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVexp" ):
                listener.enterVexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVexp" ):
                listener.exitVexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVexp" ):
                return visitor.visitVexp(self)
            else:
                return visitor.visitChildren(self)




    def vexp(self):

        localctx = XMLExpParser.VexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vexp)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.idexp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(XMLExpParser.T__0)
                self.state = 63
                self.match(XMLExpParser.VEXP)
                self.state = 64
                self.match(XMLExpParser.T__1)
                self.state = 65
                self.numexp()
                self.state = 66
                self.match(XMLExpParser.T__2)
                self.state = 67
                self.match(XMLExpParser.VEXP)
                self.state = 68
                self.match(XMLExpParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.match(XMLExpParser.T__0)
                self.state = 71
                self.match(XMLExpParser.VEXP)
                self.state = 72
                self.match(XMLExpParser.T__1)
                self.state = 73
                self.boolexp()
                self.state = 74
                self.match(XMLExpParser.T__2)
                self.state = 75
                self.match(XMLExpParser.VEXP)
                self.state = 76
                self.match(XMLExpParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(XMLExpParser.T__0)
                self.state = 79
                self.match(XMLExpParser.VEXP)
                self.state = 80
                self.match(XMLExpParser.OP)
                self.state = 81
                self.match(XMLExpParser.T__3)
                self.state = 82
                self.match(XMLExpParser.T__4)
                self.state = 83
                self.op()
                self.state = 84
                self.match(XMLExpParser.T__4)
                self.state = 85
                self.match(XMLExpParser.T__1)
                self.state = 86
                self.vexp()
                self.state = 87
                self.vexp()
                self.state = 88
                self.match(XMLExpParser.T__2)
                self.state = 89
                self.match(XMLExpParser.VEXP)
                self.state = 90
                self.match(XMLExpParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(XMLExpParser.Number, 0)

        def Minus(self):
            return self.getToken(XMLExpParser.Minus, 0)

        def getRuleIndex(self):
            return XMLExpParser.RULE_numexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumexp" ):
                listener.enterNumexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumexp" ):
                listener.exitNumexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumexp" ):
                return visitor.visitNumexp(self)
            else:
                return visitor.visitChildren(self)




    def numexp(self):

        localctx = XMLExpParser.NumexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_numexp)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XMLExpParser.Number]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(XMLExpParser.Number)
                pass
            elif token in [XMLExpParser.Minus]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(XMLExpParser.Minus)
                self.state = 96
                self.match(XMLExpParser.Number)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SkipexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def vexp(self):
            return self.getTypedRuleContext(XMLExpParser.VexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_skipexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkipexp" ):
                listener.enterSkipexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkipexp" ):
                listener.exitSkipexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkipexp" ):
                return visitor.visitSkipexp(self)
            else:
                return visitor.visitChildren(self)




    def skipexp(self):

        localctx = XMLExpParser.SkipexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_skipexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(XMLExpParser.T__0)
            self.state = 100
            self.match(XMLExpParser.PEXP)
            self.state = 101
            self.match(XMLExpParser.T__5)
            self.state = 102
            self.match(XMLExpParser.T__3)
            self.state = 103
            self.match(XMLExpParser.T__4)
            self.state = 104
            self.match(XMLExpParser.T__6)
            self.state = 105
            self.match(XMLExpParser.T__4)
            self.state = 106
            self.match(XMLExpParser.T__1)
            self.state = 107
            self.idexp()
            self.state = 108
            self.vexp()
            self.state = 109
            self.match(XMLExpParser.T__2)
            self.state = 110
            self.match(XMLExpParser.PEXP)
            self.state = 111
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def vexp(self):
            return self.getTypedRuleContext(XMLExpParser.VexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_xexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXexp" ):
                listener.enterXexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXexp" ):
                listener.exitXexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXexp" ):
                return visitor.visitXexp(self)
            else:
                return visitor.visitChildren(self)




    def xexp(self):

        localctx = XMLExpParser.XexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_xexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(XMLExpParser.T__0)
            self.state = 114
            self.match(XMLExpParser.PEXP)
            self.state = 115
            self.match(XMLExpParser.T__5)
            self.state = 116
            self.match(XMLExpParser.T__3)
            self.state = 117
            self.match(XMLExpParser.T__4)
            self.state = 118
            self.match(XMLExpParser.T__7)
            self.state = 119
            self.match(XMLExpParser.T__4)
            self.state = 120
            self.match(XMLExpParser.T__1)
            self.state = 121
            self.idexp()
            self.state = 122
            self.vexp()
            self.state = 123
            self.match(XMLExpParser.T__2)
            self.state = 124
            self.match(XMLExpParser.PEXP)
            self.state = 125
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CuexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def vexp(self):
            return self.getTypedRuleContext(XMLExpParser.VexpContext,0)


        def program(self):
            return self.getTypedRuleContext(XMLExpParser.ProgramContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_cuexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuexp" ):
                listener.enterCuexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuexp" ):
                listener.exitCuexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuexp" ):
                return visitor.visitCuexp(self)
            else:
                return visitor.visitChildren(self)




    def cuexp(self):

        localctx = XMLExpParser.CuexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cuexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(XMLExpParser.T__0)
            self.state = 128
            self.match(XMLExpParser.PEXP)
            self.state = 129
            self.match(XMLExpParser.T__5)
            self.state = 130
            self.match(XMLExpParser.T__3)
            self.state = 131
            self.match(XMLExpParser.T__4)
            self.state = 132
            self.match(XMLExpParser.T__8)
            self.state = 133
            self.match(XMLExpParser.T__4)
            self.state = 134
            self.match(XMLExpParser.T__1)
            self.state = 135
            self.idexp()
            self.state = 136
            self.vexp()
            self.state = 137
            self.program()
            self.state = 138
            self.match(XMLExpParser.T__2)
            self.state = 139
            self.match(XMLExpParser.PEXP)
            self.state = 140
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RzexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(XMLExpParser.VexpContext,i)


        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_rzexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRzexp" ):
                listener.enterRzexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRzexp" ):
                listener.exitRzexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRzexp" ):
                return visitor.visitRzexp(self)
            else:
                return visitor.visitChildren(self)




    def rzexp(self):

        localctx = XMLExpParser.RzexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rzexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(XMLExpParser.T__0)
            self.state = 143
            self.match(XMLExpParser.PEXP)
            self.state = 144
            self.match(XMLExpParser.T__5)
            self.state = 145
            self.match(XMLExpParser.T__3)
            self.state = 146
            self.match(XMLExpParser.T__4)
            self.state = 147
            self.match(XMLExpParser.T__9)
            self.state = 148
            self.match(XMLExpParser.T__4)
            self.state = 149
            self.match(XMLExpParser.T__1)
            self.state = 150
            self.vexp()
            self.state = 151
            self.idexp()
            self.state = 152
            self.vexp()
            self.state = 153
            self.match(XMLExpParser.T__2)
            self.state = 154
            self.match(XMLExpParser.PEXP)
            self.state = 155
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SrexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def vexp(self):
            return self.getTypedRuleContext(XMLExpParser.VexpContext,0)


        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_srexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSrexp" ):
                listener.enterSrexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSrexp" ):
                listener.exitSrexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSrexp" ):
                return visitor.visitSrexp(self)
            else:
                return visitor.visitChildren(self)




    def srexp(self):

        localctx = XMLExpParser.SrexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_srexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(XMLExpParser.T__0)
            self.state = 158
            self.match(XMLExpParser.PEXP)
            self.state = 159
            self.match(XMLExpParser.T__5)
            self.state = 160
            self.match(XMLExpParser.T__3)
            self.state = 161
            self.match(XMLExpParser.T__4)
            self.state = 162
            self.match(XMLExpParser.T__10)
            self.state = 163
            self.match(XMLExpParser.T__4)
            self.state = 164
            self.match(XMLExpParser.T__1)
            self.state = 165
            self.vexp()
            self.state = 166
            self.idexp()
            self.state = 167
            self.match(XMLExpParser.T__2)
            self.state = 168
            self.match(XMLExpParser.PEXP)
            self.state = 169
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LshiftexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_lshiftexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLshiftexp" ):
                listener.enterLshiftexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLshiftexp" ):
                listener.exitLshiftexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLshiftexp" ):
                return visitor.visitLshiftexp(self)
            else:
                return visitor.visitChildren(self)




    def lshiftexp(self):

        localctx = XMLExpParser.LshiftexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lshiftexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(XMLExpParser.T__0)
            self.state = 172
            self.match(XMLExpParser.PEXP)
            self.state = 173
            self.match(XMLExpParser.T__5)
            self.state = 174
            self.match(XMLExpParser.T__3)
            self.state = 175
            self.match(XMLExpParser.T__4)
            self.state = 176
            self.match(XMLExpParser.T__11)
            self.state = 177
            self.match(XMLExpParser.T__4)
            self.state = 178
            self.match(XMLExpParser.T__1)
            self.state = 179
            self.idexp()
            self.state = 180
            self.match(XMLExpParser.T__2)
            self.state = 181
            self.match(XMLExpParser.PEXP)
            self.state = 182
            self.match(XMLExpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RshiftexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PEXP(self, i:int=None):
            if i is None:
                return self.getTokens(XMLExpParser.PEXP)
            else:
                return self.getToken(XMLExpParser.PEXP, i)

        def idexp(self):
            return self.getTypedRuleContext(XMLExpParser.IdexpContext,0)


        def getRuleIndex(self):
            return XMLExpParser.RULE_rshiftexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRshiftexp" ):
                listener.enterRshiftexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRshiftexp" ):
                listener.exitRshiftexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRshiftexp" ):
                return visitor.visitRshiftexp(self)
            else:
                return visitor.visitChildren(self)




    def rshiftexp(self):
